--- a/css/style-au.css
+++ b/css/style-au.css
@@ -187,25 +187,6 @@ section {
 
 /* If you don't want the footer to be responsive, remove these media queries */
 
-@media (max-width: 1000px) {
-  .footer-distributed {
-    font: bold 14px sans-serif;
-  }
-
-  .footer-distributed .footer-company-name {
-    font-size: 12px;
-  }
-
-  .footer-distributed form input,
-  .footer-distributed form textarea {
-    width: 250px;
-  }
-
-  .footer-distributed form button {
-    padding: 10px 35px;
-  }
-}
-
 @media (max-width: 800px) {
   .footer-distributed {
     padding: 30px;
@@ -267,4 +248,60 @@ section {
   width: 100%;
   z-index: 100;
   top: 0;
+}
+
+/* MOBILE */
+@media only screen and (max-width: 600px) {
+  .navbar {
+    position: absolute;
+    margin: auto;
+    font-size: 23px;
+    padding-left: 40px;
+    width: 100%;
+    top: 0;
+  }
+  .navbar-nav {
+    margin: auto;
+    font-size: 18px;
+    top: 0;
+    background-color: black;
+  }
+  .imagecontainer {
+    position: relative;
+    /* width: 100vw; */
+    /* width: 100%; */
+    height: 50%;
+    overflow: hidden;
+    z-index: -100;
+  }
+  .Heading {
+    font-size: 2.2rem;
+    color: #f4f4f8;
+    width: 50%;
+    font-weight: bold;
+  }
+  .content {
+    padding-top: 1rem;
+    text-align: center;
+    font-size: 10px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+  }
+  .innercontent {
+    text-align: center;
+    width: 100%;
+    padding-left: 0.7rem;
+    padding-right: 0.7rem;
+    font-size: 14px;
+  }
+
+  .main {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    padding-top: 1rem;
+    z-index: 100;
+
+    top: 0;
+  }
 }
