--- a/css/styleFAQ.css
+++ b/css/styleFAQ.css
@@ -388,12 +388,48 @@ section {
   margin-bottom: 14px;
 }
 
-@media (max-width: 991px) {
-  .faq {
-    margin-bottom: 30px;
+/* MOBILE */
+@media only screen and (max-width: 600px) {
+  .navbar {
+    position: absolute;
+    margin: auto;
+    font-size: 23px;
+    padding-left: 40px;
+    width: 100%;
+    top: 0;
+  }
+  .navbar-nav {
+    margin: auto;
+    font-size: 18px;
+    top: 0;
+    background-color: black;
+  }
+  .faq-title h1 {
+    position: relative;
+    margin-bottom: 1px;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    display: inline-block;
+    font-weight: 400;
+    padding-top: 1 rem;
+    font-size: 3rem;
   }
   .faq .card .card-header .faq-title {
-    line-height: 26px;
-    margin-top: 10px;
+    width: 100%;
+    text-align: left;
+    padding: 0px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-weight: 400;
+    font-size: 14px;
+    letter-spacing: 1px;
+    color: white;
+    text-decoration: none !important;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
