--- a/css/styleIO.css
+++ b/css/styleIO.css
@@ -261,6 +261,7 @@ section {
 .innercontent {
   text-align: center;
   width: 100%;
+  height: 140vh;
   padding-left: 25%;
   padding-right: 25%;
   font-size: 27px;
@@ -272,9 +273,125 @@ section {
 .main {
   position: absolute;
   overflow: hidden;
-  height: 100vh;
+  height: 120vh;
   text-align: center;
   width: 100%;
   z-index: 100;
   top: 0;
+}
+/* MOBILE */
+@media only screen and (max-width: 600px) {
+  .navbar {
+    position: absolute;
+    margin: auto;
+    font-size: 23px;
+    padding-left: 40px;
+    width: 100%;
+    top: 0;
+  }
+  .navbar-nav {
+    margin: auto;
+    font-size: 18px;
+    top: 0;
+    background-color: black;
+  }
+  .imagecontainer {
+    position: relative;
+    /* width: 100vw; */
+    /* width: 100%; */
+    height: 50%;
+    overflow: hidden;
+    z-index: -100;
+  }
+  .Heading {
+    font-size: 2.2rem;
+    color: #f4f4f8;
+    width: 50%;
+    font-weight: bold;
+  }
+  .content {
+    padding-top: 1rem;
+    text-align: center;
+    font-size: 10px;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+  }
+  .innercontent {
+    text-align: center;
+    width: 100%;
+    padding-left: 0.7rem;
+    padding-right: 0.7rem;
+    font-size: 14px;
+  }
+  .apage {
+    background-color: #f3f1f5;
+  }
+  .bgimage {
+    margin-left: 50%;
+    transform: translateX(-50%);
+    /*  
+    min-width: 100vw;*/
+    z-index: -100;
+    /* 
+    min-height: 100vh; */
+    filter: blur(5px) grayscale(10%);
+  }
+
+  * {
+    font-family: Roboto;
+  }
+
+  .main {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    padding-top: 1rem;
+    z-index: 100;
+
+    top: 0;
+  }
+  .footer-distributed {
+    padding: 30px;
+  }
+
+  .footer-distributed .footer-left,
+  .footer-distributed .footer-right {
+    float: none;
+    max-width: 300px;
+    margin: 0 auto;
+  }
+
+  .footer-distributed .footer-left {
+    margin-bottom: 40px;
+  }
+
+  .footer-distributed form {
+    display: block;
+  }
+
+  .footer-distributed form button {
+    float: none;
+  }
+}
+.footer-distributed {
+  background: #444;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
+  box-sizing: border-box;
+  width: 100%;
+  font: bold 16px sans-serif;
+  text-align: left;
+  padding: 50px 60px 40px;
+  overflow: hidden;
+  bottom: 0;
+}
+
+section {
+  width: 100%;
+
+  text-align: center;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: underline;
+  bottom: 0em;
+  padding: 0em;
 }
