--- a/css/styleOPE.css
+++ b/css/styleOPE.css
@@ -272,3 +272,59 @@ section {
   z-index: 100;
   top: 0;
 }
+
+@media only screen and (max-width: 600px) {
+  .navbar {
+    position: absolute;
+    margin: auto;
+    font-size: 23px;
+    padding-left: 40px;
+    width: 100%;
+    top: 0;
+  }
+  .navbar-nav {
+    margin: auto;
+    font-size: 18px;
+    top: 0;
+    background-color: black;
+  }
+  .imagecontainer {
+    position: relative;
+    width: 100vw;
+    width: 100%;
+    overflow: hidden;
+    z-index: -100;
+  }
+  .Heading {
+    font-size: 2.8rem;
+    color: #f4f4f8;
+    width: 50%;
+    font-weight: bold;
+  }
+  .content {
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 30px;
+    color: white;
+  }
+  .innercontent {
+    text-align: center;
+    width: 100%;
+    padding-left: 7%;
+    padding-right: 3%;
+    font-size: 20px;
+  }
+  .apage {
+    background-color: #f3f1f5;
+  }
+
+  .main {
+    padding-top: 1rem;
+    position: absolute;
+    font-size: 20 px;
+    text-align: center;
+    width: 100%;
+    z-index: 100;
+    top: 0;
+  }
+}
