--- a/css/styletc.css
+++ b/css/styletc.css
@@ -278,3 +278,38 @@ section {
   z-index: 100;
   top: 0;
 }
+@media only screen and (max-width: 600px) {
+  .navbar {
+    position: absolute;
+    margin: auto;
+    font-size: 23px;
+    padding-left: 40px;
+    width: 100%;
+    top: 0;
+  }
+  .navbar-nav {
+    margin: auto;
+    font-size: 18px;
+    top: 0;
+    background-color: black;
+  }
+  .innercontent {
+    width: 110%;
+    padding-left: 15%;
+    padding-right: 15%;
+    font-size: 15px;
+  }
+  .main {
+    overflow: hidden;
+    height: 140vh;
+    width: 100%;
+    z-index: 100;
+    top: 0;
+  }
+  .content {
+    padding-top: 50px;
+    text-align: center;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    color: white;
+  }
+}
