--- a/css/styleone.css
+++ b/css/styleone.css
@@ -16,9 +16,12 @@
   background-size: cover;
 }
 #topText {
+  text-align: center;
+  padding-right: 6rem;
+  padding-left: 6rem;
   font-size: 2.5rem;
   color: #d3d8e2;
-  width: 45%;
+  width: 100vw;
   font-weight: bold;
 }
 .corousel-content {
@@ -79,6 +82,7 @@
     background-size: cover;
   }
   #topText {
+    justify-content: center;
     font-size: 1rem;
     color: #d3d8e2;
     width: 100%;
